--- a/.github/workflows/punch_in.yml
+++ b/.github/workflows/punch_in.yml
@@ -2,8 +2,9 @@ name: Punch In
 
 on:
   schedule:
-    - cron: 55 8 * * *
-  workflow_dispatch:
+    - cron: '55 0 * * *'  # 台北時間 08:55
+    - cron: '55 8 * * *'  # 台北時間 16:55
+  workflow_dispatch:  # 手動觸發
 
 jobs:
   punch_in:
